Actualización de los casos

--- a/templates/Limpiar.html
+++ b/templates/Limpiar.html
@@ -16,7 +16,7 @@
 
 <body class="container mt-5">
     <h1 class="mb-4">Limpieza archivos Mayorista</h1>
-    <form method="post" enctype="multipart/form-data" onsubmit="formatearNombresColumnas()">
+    <form method="post" enctype="multipart/form-data">
         <div class="mb-3">
             <label for="regex_pattern" class="form-label">Caracteres que desea eliminar:</label>
             <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
