--- a/templates/detalles.html
+++ b/templates/detalles.html
@@ -16,40 +16,49 @@
 <body class="container mt-5">
     <h1 class="mb-4">Limpieza archivos Detalles Netcracker</h1>
 
+
     <div class="mb-3">
         <label id="modo_consolidacion" class="form-label">Seleccione el Modo de Limpieza:</label>
         <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
             title="Tubo hace referencia al caracter |, mientras que Coma al caracter ,">
         </i>
         <div class="btn-group" role="group" aria-label="Modo de Detalles">
-            <button type="button" class="btn btn-primary" onclick="mostrarFormulario('Form_Subir_Archivos_Coma');">Limpiar archivos por Comas</button>
-            <button type="button" class="btn btn-primary" onclick="mostrarFormulario('Form_Subir_Archivos_Tubo');">Limpiar archivos por Tubo</button>
+            <input type="hidden" name="modo_seleccionado_detalle" id="modo_seleccionado_detalle">
+            <button type="button" class="btn btn-primary" name="modo_seleccionado_detalle" value="limpiar_coma" onclick="mostrarFormulario('limpiar_coma');">Limpiar archivos por Comas</button>
+            <button type="button" class="btn btn-primary" name="modo_seleccionado_detalle" value="limpiar_tubo" onclick="mostrarFormulario('limpiar_tubo');">Limpiar archivos por Tubo</button>
+
         </div>
     </div>
 
-    <form method="post" enctype="multipart/form-data" id="Form_Subir_Archivos_Coma" style="display: none;">
-        <input type="hidden" name="modo_seleccionado" value="limpiar_coma">
+    <form method="post" enctype="multipart/form-data" id="form_detalle_coma" style="display: none;">
+        <input type="hidden" name="modo_seleccionado_detalle" id="modo_seleccionado_detalle_coma">
         <div class="mb-3">
             <label for="file" class="form-label">Cargue sus archivos Excel:</label>
             <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
                 title="Seleccione uno o varios archivos Excel para procesar">
             </i>
-            <input type="file" name="file2[]" class="form-control" id="Subida_de_Archivos" multiple>
+            </label>
+            <input type="file" name="file1[]" class="form-control" multiple>
+            <input type="hidden" name="modo_seleccionado" id="modo_seleccionado">
+            <button type="submit" class="btn btn-primary"  id="Subida_de_Archivos">Procesar</button>
         </div>
-        <button type="submit" class="btn btn-primary">Procesar</button>
     </form>
 
-    <form method="post" enctype="multipart/form-data" id="Form_Subir_Archivos_Tubo" style="display: none;">
-        <input type="hidden" name="modo_seleccionado" value="limpiar_tubo">
+
+    <form method="post" enctype="multipart/form-data" id="form_detalle_tubo" style="display: none;">
+        <input type="hidden" name="modo_seleccionado_detalle" id="modo_seleccionado_detalle_tubo">
         <div class="mb-3">
             <label for="file" class="form-label">Cargue sus archivos Excel:</label>
             <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
                 title="Seleccione uno o varios archivos Excel para procesar">
             </i>
-            <input type="file" name="file2[]" class="form-control" id="Subida_de_Archivos" multiple>
+            </label>
+            <input type="file" name="file2[]" class="form-control" multiple>
+            <input type="hidden" name="modo_seleccionado" id="modo_seleccionado">
+            <button type="submit" class="btn btn-primary"  id="Subida_de_Archivos">Procesar</button>
         </div>
-        <button type="submit" class="btn btn-primary">Procesar</button>
     </form>
+
 
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -68,16 +77,25 @@
             });
         });
     
-        function mostrarFormulario(formularioId) {
-            // Ocultar todos los formularios
-            document.getElementById('Form_Subir_Archivos_Coma').style.display = 'none';
-            document.getElementById('Form_Subir_Archivos_Tubo').style.display = 'none';
-
-            // Mostrar el formulario correspondiente
-            document.getElementById(formularioId).style.display = 'block';
+        function mostrarFormulario(modo) {
+            // Asignar el valor del modo al input oculto
+            if (modo == 'limpiar_coma') {
+                document.getElementById('modo_seleccionado_detalle_coma').value = modo;
+                // Mostrar el formulario
+                document.getElementById('form_detalle_coma').style.display = 'block';
+                // Ocultar el otro formulario
+                document.getElementById('form_detalle_tubo').style.display = 'none';
+            } else if (modo == 'limpiar_tubo') {
+                document.getElementById('modo_seleccionado_detalle_tubo').value = modo;
+                // Mostrar el formulario
+                document.getElementById('form_detalle_tubo').style.display = 'block';
+                // Ocultar el otro formulario
+                document.getElementById('form_detalle_coma').style.display = 'none';
+            }
         }
     </script>
     
 </body>
 
 </html>
+
