--- a/templates/detalles.html
+++ b/templates/detalles.html
@@ -10,23 +10,24 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+
+    <link rel="stylesheet" href="static/style.css">
+
 </head>
 
 <body class="container mt-5">
-    <h1 class="mb-4">Limpieza archivos Detalles Netcracker</h1>
+    <header class="header">
+        <h1 class="mb-4">Limpieza archivos tipo CSV</h1>
+    </header>
 
 
-    <div class="mb-3">
+    <div class="mb-3 text-center">
         <label id="modo_consolidacion" class="form-label">Seleccione el Modo de Limpieza:</label>
-        <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
-            title="Tubo hace referencia al caracter |, mientras que Coma al caracter ,">
-        </i>
-        <div class="btn-group" role="group" aria-label="Modo de Detalles">
+        <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="Tubo hace referencia al caracter |, mientras que Coma al caracter ,"></i>
+        <div class="btn-group d-flex justify-content-center" role="group" aria-label="Modo de Detalles">
             <input type="hidden" name="modo_seleccionado_detalle" id="modo_seleccionado_detalle">
-            <button type="button" class="btn btn-primary" name="modo_seleccionado_detalle" value="limpiar_coma" onclick="mostrarFormulario('limpiar_coma');">Limpiar archivos por Comas</button>
-            <button type="button" class="btn btn-primary" name="modo_seleccionado_detalle" value="limpiar_tubo" onclick="mostrarFormulario('limpiar_tubo');">Limpiar archivos por Tubo</button>
-
+            <button type="button" class="btn btn-primary me-2" name="modo_seleccionado_detalle" value="limpiar_coma" onclick="mostrarFormulario('limpiar_coma');" style="padding: 10px; display: inline-block;">Limpiar archivos por Comas</button>
+            <button type="button" class="btn btn-primary" name="modo_seleccionado_detalle" value="limpiar_tubo" onclick="mostrarFormulario('limpiar_tubo');" style="padding: 10px; display: inline-block;">Limpiar archivos por Tubo</button>
         </div>
     </div>
 
@@ -34,39 +35,30 @@
         <input type="hidden" name="modo_seleccionado_detalle" id="modo_seleccionado_detalle_coma">
         <div class="mb-3">
             <label for="file" class="form-label">Cargue sus archivos Excel:</label>
-            <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
-                title="Seleccione uno o varios archivos Excel para procesar">
-            </i>
-            </label>
-            <input type="file" name="file1[]" class="form-control" multiple>
-            <input type="hidden" name="modo_seleccionado" id="modo_seleccionado">
-            <button type="submit" class="btn btn-primary"  id="Subida_de_Archivos">Procesar</button>
+            <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="Seleccione uno o varios archivos Excel para procesar"></i>
+            <input type="file" name="file1[]" class="form-control" multiple required>
+            <button type="submit" class="btn btn-primary mt-2" id="Subida_de_Archivos">Procesar</button>
         </div>
     </form>
-
 
     <form method="post" enctype="multipart/form-data" id="form_detalle_tubo" style="display: none;">
         <input type="hidden" name="modo_seleccionado_detalle" id="modo_seleccionado_detalle_tubo">
         <div class="mb-3">
             <label for="file" class="form-label">Cargue sus archivos Excel:</label>
-            <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
-                title="Seleccione uno o varios archivos Excel para procesar">
-            </i>
-            </label>
-            <input type="file" name="file2[]" class="form-control" multiple>
-            <input type="hidden" name="modo_seleccionado" id="modo_seleccionado">
-            <button type="submit" class="btn btn-primary"  id="Subida_de_Archivos">Procesar</button>
+            <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="Seleccione uno o varios archivos Excel para procesar"></i>
+            <input type="file" name="file2[]" class="form-control" multiple required>
+            <button type="submit" class="btn btn-primary mt-2" id="Subida_de_Archivos">Procesar</button>
         </div>
     </form>
 
-
+    
+    
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Enlace a FontAwesome para Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
-    <!-- Resto del código... -->
 
     <script>
         // Inicializar tooltips de Bootstrap
@@ -76,7 +68,7 @@
                 return new bootstrap.Tooltip(tooltipTriggerEl)
             });
         });
-    
+
         function mostrarFormulario(modo) {
             // Asignar el valor del modo al input oculto
             if (modo == 'limpiar_coma') {
@@ -94,8 +86,11 @@
             }
         }
     </script>
-    
+    <!-- Pie de página -->
+    <div class="footer">
+        <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
+        <p>&copy; 2024 Procesador de Archivos Excel</p>
+    </div>
 </body>
 
 </html>
-
