--- a/templates/index.html
+++ b/templates/index.html
@@ -9,16 +9,62 @@
 
     <!-- Enlace a Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="static/style.css">
+
 </head>
 
-<body class="container text-center">
-    <h1>Manipulación de Excel</h1>
-    <a href="/limpiar"><button class="btn btn-primary">Limpiar Excels Mayorista</button></a>
-    <a href="/consolidar"><button class="btn btn-success">Consolidar Excels</button></a>
-    <a href="/detalles"><button class="btn btn-danger">Limpiar Excels Detalles</button></a>
+<body>
+    <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Excel GTD</a>
+        </div>
+    </nav>
+
+    <div class="container mt-5">
+        <h1 class="text-center mb-4">Manipulación de Excel</h1>
+
+        <div class="row">
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
+                    <div class="card-body">
+                        <h4 class="card-title">Limpiar Excels bajo un patron específico</h4>
+                    </div>
+                    <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
+                        <a href="/limpiar"  class="btn btn-yellow">Ir</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
+                    <div class="card-body">
+                        <h4 class="card-title">Consolidar información de Excels</h4>
+                    </div>
+                    <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
+                        <a href="/consolidar"  class="btn btn-aqua">Ir</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
+                    <div class="card-body text-wrap">
+                        <h4 class="card-title">Limpiar arcivos separados por comas o tubo</h4>
+                    </div>
+                    <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
+                        <a href="/detalles" class="btn btn-blue">Ir</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
+<div class="footer">
+    <p>&copy; 2024 Procesador de Archivos Excel</p>
+</div>
 
 </html>
