--- a/templates/Limpiar.html
+++ b/templates/Limpiar.html
@@ -13,34 +13,15 @@
     <!-- Enlace a FontAwesome para Bootstrap -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <style>
-        body {
-            padding-bottom: 70px; /* Altura del pie de página */
-        }
+    <link rel="stylesheet" href="static/style.css">
 
-        .header {
-            background-color: #ffffff;
-            color: #000000;
-            padding: 20px;
-            text-align: center;
-        }
 
-        .footer {
-            background-color: #f8f9fa;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-        }
-    </style>
 </head>
 
 <body class="container mt-5">
 
     <header class="header">
-        <h1 class="mb-4">Limpieza archivos Mayorista</h1>
+        <h1 class="mb-4">Limpieza archivos</h1>
     </header>
     <form method="post" enctype="multipart/form-data">
         <div class="mb-3">
@@ -69,7 +50,6 @@
     <!-- Enlace a FontAwesome para Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
 
-    <!-- Resto del código... -->
     <script>
         // Inicializar tooltips de Bootstrap
         document.addEventListener('DOMContentLoaded', function () {
@@ -79,8 +59,8 @@
             });
         });
     </script>
-    
-        <div class="footer">
+
+    <div class="footer">
         <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
         <p>&copy; 2024 Procesador de Archivos Excel</p>
     </div>
