--- a/templates/consolidacion2.html
+++ b/templates/consolidacion2.html
@@ -13,28 +13,6 @@
     
     <link rel="stylesheet" href="static/style.css">
 
-    <style>
-        body {
-            padding-bottom: 70px; /* Altura del pie de página */
-        }
-
-        .header {
-            background-color: #ffffff;
-            color: #000000;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .footer {
-            background-color: #f8f9fa;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            left: 0;
-            width: 100%;
-        }
-    </style>    
 
 </head>
 
@@ -154,6 +132,11 @@
             });
         });
     </script>
+
+    <div class="footer">
+        <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
+        <p>&copy; 2024 Procesador de Archivos Excel</p>
+    </div>
 </body>
 
 </html>
