--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,7 @@
 </body>
 
 <div class="footer">
+    <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
     <p>&copy; 2024 Procesador de Archivos Excel</p>
 </div>
 
