--- a/templates/consolidacion.html
+++ b/templates/consolidacion.html
@@ -29,7 +29,7 @@
             <div class="mb-3 text-center">
                 <div class="btn-group" role="group" aria-label="Modo de Consolidación">
                     <input type="hidden" name="modo_seleccionado" id="modo_seleccionado">
-                    <button type="button" class="btn btn-primary" name="modo_seleccionado" value="concatenar_archivos" onclick="mostrarFormulario('concatenar_archivos');">Concatenar toda la información</button>
+                    <button type="button" class="btn btn-primary me-2" name="modo_seleccionado" value="concatenar_archivos" onclick="mostrarFormulario('concatenar_archivos');">Concatenar toda la información</button>
                     <button type="button" class="btn btn-primary" name="modo_seleccionado" value="concatenar_por_columnas" onclick="mostrarFormulario('concatenar_por_columnas');">Concatenar en base a Columna similar</button>
                 </div>
             </div>
