--- a/templates/index.html
+++ b/templates/index.html
@@ -49,7 +49,7 @@
             <div class="col-lg-4 col-md-6 mb-4">
                 <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
                     <div class="card-body text-wrap">
-                        <h4 class="card-title">Limpiar arcivos separados por comas o tubo</h4>
+                        <h4 class="card-title">Limpiar archivos CSV</h4>
                     </div>
                     <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
                         <a href="/detalles" class="btn btn-blue">Ir</a>
@@ -64,7 +64,6 @@
 </body>
 
 <div class="footer">
-    <a href="/" class="btn btn-primary mb-3">Volver al inicio</a>
     <p>&copy; 2024 Procesador de Archivos Excel</p>
 </div>
 
