--- a/templates/result.html
+++ b/templates/result.html
@@ -10,6 +10,7 @@
 
     <!-- Enlace a Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body class="container mt-5">
@@ -71,7 +72,7 @@
         <!-- Botón para descargar todos los archivos -->
         <button id="descargarTodos" class="btn btn-primary" onclick="descargarTodos()">Descargar Todos</button>
 
-        <a href="{{ url_for('index') }}" class="btn btn-secondary">Volver Atrás</a>
+        <a href="{{ url_for('limpiar') }}" class="btn btn-secondary">Volver Atrás</a>
     {% endif %}
 
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
