--- a/templates/result2.html
+++ b/templates/result2.html
@@ -9,6 +9,7 @@
 
     <!-- Enlace a Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body class="container mt-5">
@@ -67,7 +68,7 @@
         <button id="descargarTodos" class="btn btn-primary" onclick="descargarTodos()">Descargar Todos</button>
         
         <!-- Botón para volver atrás y eliminar resultados previos -->
-        <a href="{{ url_for('index') }}" class="btn btn-secondary">Volver Atrás</a>
+        <a href="{{ url_for('detalles') }}" class="btn btn-secondary">Volver Atrás</a>
     {% endif %}
 
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
