--- a/templates/result3.html
+++ b/templates/result3.html
@@ -9,6 +9,7 @@
 
     <!-- Enlace a Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 
 <body class="container mt-5">
@@ -41,7 +42,7 @@
     </table>
 
     <!-- Botón para volver atrás y eliminar resultados previos -->
-    <a href="{{ url_for('index') }}" class="btn btn-secondary">Volver Atrás</a>
+    <a href="{{ url_for('consolidar') }}" class="btn btn-secondary">Volver Atrás</a>
     {% endif %}
 
     <script>
