arreglo de rutas

--- a/templates/consolidacion.html
+++ b/templates/consolidacion.html
@@ -39,7 +39,7 @@
             <form method="post" enctype="multipart/form-data" id="form_concatenar_archivos" style="display: none;">
                 <input type="hidden" name="modo_seleccionado" id="modo_seleccionado_concatenar_archivos">
                 <div class="mb-3">
-                    <label for="file_base" class="form-label">Cargue su archivo base Excel:</label>
+                    <label for="file_base" class="form-label">Cargue los archivos a consolidar:</label>
                     <i class="fas fa-info-circle" data-bs-toggle="tooltip" data-bs-placement="top"
                         title="El archivo base es sobre el cual quiere realizar la búsqueda, y debe tener formato xlsx">
                     </i>
