--- a/templates/result2.html
+++ b/templates/result2.html
@@ -55,7 +55,7 @@
                     <tr>
                         <td>{{ path | basename }}</td>
                         <td>
-                            <a href="{{ url_for('detallados', user_id=session['user_id'], filename=path) }}" download>
+                            <a href="{{ url_for('detallados', user_id=session['user_id'], filename=path | basename) }}" download>
                                 <img src="{{ url_for('static', filename='sobresalir.png') }}" alt="Excel Icon" style="width: 20px; height: 20px;">
                                 Descargar
                             </a>                            
