--- a/templates/consolidacion2.html
+++ b/templates/consolidacion2.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <link rel="stylesheet" href="static/style.css">
-
+    
 
 </head>
 
@@ -51,12 +51,13 @@
                 <div id="checkbox_container" class="horizontal-list"></div>
             </div>
 
-            <button type="button" class="btn btn-primary" id="cargar_btn">Cargar</button>
+            <button type="submit" class="btn btn-primary" id="cargar_btn">Cargar</button>
         {% endif %}
     </form>
 
     <!-- Enlace a Bootstrap JS y Popper.js (necesarios para algunas funciones de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     <!-- Enlace a FontAwesome para Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"></script>
@@ -123,13 +124,15 @@
             function ocultarCasillasSeleccion() {
                 document.getElementById('columnas_seleccionadas').style.display = 'none';
             }
-
-            // Manejar el evento de clic en el botón Cargar
-            document.getElementById('cargar_btn').addEventListener('click', function () {
-                // Puedes agregar lógica adicional aquí si es necesario
-                // Ejemplo: validar que al menos una casilla esté seleccionada antes de enviar el formulario
+            document.getElementById('cargar_btn').addEventListener('click', function (event) {
+            var checkboxes = document.querySelectorAll('input[name="columnas_seleccionadas"]:checked');
+            if (checkboxes.length === 0) {
+                event.preventDefault();
+                alert('Por favor, selecciona al menos una columna para agregar al excel consolidado.');
+            } else {
                 document.getElementById('form_concatenar_las_columnas').submit();
-            });
+            }
+        });
         });
     </script>
 
