--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     </nav>
 
     <div class="container mt-5">
-        <h1 class="text-center mb-4">Manipulación de Excel</h1>
+        <h1 class="text-center mb-4">test</h1>
 
         <div class="row">
             <div class="col-lg-4 col-md-6 mb-4">
@@ -53,6 +53,17 @@
                     </div>
                     <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
                         <a href="/detalles" class="btn btn-blue">Ir</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column">
+                    <div class="card-body">
+                        <h4 class="card-title">Busqueda y descarga PDF</h4>
+                    </div>
+                    <div class="mt-auto d-flex justify-content-center pb-3">
+                        <a href="/buscar" class="btn btn-red">Ir</a>
                     </div>
                 </div>
             </div>
