--- a/templates/index.html
+++ b/templates/index.html
@@ -23,43 +23,45 @@
     <div class="container mt-5">
         <h1 class="text-center mb-4">test</h1>
 
-        <div class="row">
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
-                    <div class="card-body">
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column">
+                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
                         <h4 class="card-title">Limpiar Excels bajo un patron específico</h4>
                     </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
+                    <div class="mt-auto d-flex justify-content-center pb-3">
                         <a href="/limpiar"  class="btn btn-yellow">Ir</a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
-                    <div class="card-body">
+            <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column">
+                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
                         <h4 class="card-title">Consolidar información de Excels</h4>
                     </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
+                    <div class="mt-auto d-flex justify-content-center pb-3">
                         <a href="/consolidar"  class="btn btn-aqua">Ir</a>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <div class="col-lg-4 col-md-6 mb-4">
-                <div class="card h-100 d-flex flex-column"> <!-- Added 'd-flex' and 'flex-column' classes -->
-                    <div class="card-body text-wrap">
+        <div class="row justify-content-center">
+            <div class="col-lg-5 col-md-6 mb-4">
+                <div class="card h-100 d-flex flex-column">
+                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
                         <h4 class="card-title">Limpiar archivos CSV</h4>
                     </div>
-                    <div class="mt-auto d-flex justify-content-center pb-3"> <!-- Added 'mt-auto', 'd-flex', 'justify-content-center' and 'pb-3' classes -->
+                    <div class="mt-auto d-flex justify-content-center pb-3">
                         <a href="/detalles" class="btn btn-blue">Ir</a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 mb-4">
+            <div class="col-lg-5 col-md-6 mb-4">
                 <div class="card h-100 d-flex flex-column">
-                    <div class="card-body">
+                    <div class="card-body text-center"> <!-- Added 'text-center' class -->
                         <h4 class="card-title">Busqueda y descarga PDF</h4>
                     </div>
                     <div class="mt-auto d-flex justify-content-center pb-3">
