--- a/templates/index.html
+++ b/templates/index.html
@@ -14,9 +14,11 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Excel GTD</a>
+    <nav class="navbar navbar-expand-lg navigation-gtd-movil only-mobile">
+        <div class="barra_navegacion__logo desktop_footer">
+          <a href="#">
+            <img alt="GTD Chile" data-src="static\layout_set_logo.png" class=" lazyloaded" src="static\layout_set_logo.png">
+          </a>
         </div>
     </nav>
 
