--- a/static/style.css
+++ b/static/style.css
@@ -1,58 +1,95 @@
+/* Estilos para la barra de navegación azul oscuro */
+.navbar {
+    background-color: #003a70;
+    height: 2vw; /* Ajusta este valor según sea necesario */
+}
+
+/* Estilos para los enlaces dentro de la barra de navegación */
+.navbar a {
+    color: #ffffff;
+    padding-bottom: 25px;
+}
+
+/* Estilos para el botón de la barra de navegación */
+.navbar .navbar-toggler {
+    border-color: #ffffff;
+    padding-bottom: 25px;
+}
+
+/* Estilos para el contenedor del logo en la barra de navegación */
+.barra_navegacion__logo {
+    position: relative;
+    text-align: center;
+    padding: 10px; /* Ajusta este valor según sea necesario */
+}
+
+/* Estilos para la imagen en la barra de navegación */
+.barra_navegacion__logo img {
+    width: 4vw; /* Ajusta este valor según sea necesario */
+    height: auto;
+    position: relative;
+    top: 20px; /* Ajusta este valor según sea necesario */
+}
+
+/* Estilos generales para la lista horizontal y los elementos de la lista */
 .horizontal-list {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
+
 .horizontal-list .checkbox {
     margin-right: 2em; /* Ajusta este valor según tus necesidades */
 }
 
-.button{
+/* Estilos para los botones */
+.button {
     padding: 10px;
     display: inline-block;
 }
 
-.btn-red{
-    background-color: #d07673;
-    color: white;
-
-}
-
-.btn-yellow{
-    background-color: #eda215;
-    color: white;
-}
-
-.btn-yellow:hover{
-    background-color: #eda215;
-}
-
-.btn-aqua{
-    background-color: #4db99c;
-    color: white;
-}
-
-.btn-aqua:hover{
-    background-color: #4db99c;
-}
-
-.btn-blue{
-    background-color: #4e6eaf;
-    color: white;
-}
-
-.btn-blue:hover{
-    background-color: #4e6eaf;
-}
-
-.btn{
+.btn {
     padding: 0.375rem 1.5rem;
 }
 
+.btn-red {
+    background-color: #d07673;
+    color: white;
+}
+
+.btn-yellow {
+    background-color: #eda215;
+    color: white;
+}
+
+.btn-yellow:hover {
+    background-color: #eda215;
+}
+
+.btn-aqua {
+    background-color: #4db99c;
+    color: white;
+}
+
+.btn-aqua:hover {
+    background-color: #4db99c;
+}
+
+.btn-blue {
+    background-color: #4e6eaf;
+    color: white;
+}
+
+.btn-blue:hover {
+    background-color: #4e6eaf;
+}
+
+/* Estilos para el cuerpo de la página */
 body {
     padding-bottom: 70px; /* Altura del pie de página */
 }
 
+/* Estilos para el encabezado */
 .header {
     background-color: #ffffff;
     color: #000000;
@@ -60,9 +97,10 @@ body {
     text-align: center;
 }
 
+/* Estilos para el pie de página */
 .footer {
     background-color: #f8f9fa;
-    padding: 10px;
+    padding: 2vh; /* Porcentaje de la altura de la ventana */
     text-align: center;
     position: fixed;
     bottom: 0;
@@ -70,10 +108,12 @@ body {
     width: 100%;
 }
 
+/* Estilos para la caja de selección */
 .select-box {
     margin: 10px;
 }
 
+/* Estilos para el contenedor de checkbox */
 #checkbox_container {
     display: flex;
     flex-wrap: wrap;
@@ -81,7 +121,7 @@ body {
     gap: 20px;
 }
 
-
+/* Clase oculta para elementos escondidos */
 .oculto {
     position: absolute;
     left: -9999em;
@@ -90,10 +130,25 @@ body {
     height: 1px;
     overflow: hidden;
 }
+
+/* Estilos para los campos de entrada de texto */
 .nombreEmpresa,
 .numerosFolio,
 .tipo,
 .rut {
     text-align: center; /* Centrar el texto en los campos de entrada */
     margin: auto 0;
+}
+
+/* Media query para pantallas pequeñas */
+@media (max-width: 768px) {
+    .navbar {
+        height: 10vw;
+    }
+
+    .barra_navegacion__logo img {
+        width: 10vw;
+    }
+
+    /* Agrega otros estilos específicos para pantallas pequeñas si es necesario */
 }
